--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,15 @@ wheels/
 # Virtual environments
 .venv
 
+# Environment variables
 .env
-.dist
+
+# Claude Code
+.claude/**
 claude.md
 claude.local.md
-.claude/**
+
+# VS Code and library caches
+.dist
+.flake8
+.ruff_cache
